[gd_scene format=3 uid="uid://cjbjx3q8bbsba"]

[ext_resource type="Script" uid="uid://brbc61mqlfwwx" path="res://Player/shock.gd" id="1_gpcr2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tjdei"]
radius = 49.92995

[node name="Shock" type="Node2D" unique_id=258442079]
script = ExtResource("1_gpcr2")

[node name="Area2D" type="Area2D" parent="." unique_id=2131219538]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=326748559]
shape = SubResource("CircleShape2D_tjdei")
debug_color = Color(0.64693975, 0.5229238, 0.057132177, 0.41960785)

[node name="killTimer" type="Timer" parent="." unique_id=64628366]

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="killTimer" to="." method="_on_kill_timer_timeout"]
